--- a/index.html
+++ b/index.html
@@ -75,17 +75,28 @@
 <script src="handleclick.js"></script>
 <script>
     let audioPlayed = false;
+    let gifs = [
+        "url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExb2d3cDV2NXMybHFwdTVoMGUxNm0zYTc4ZGx2bTJsaDFxY251YmZ3aiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3ov9jEnypymbFQJ9CM/giphy.gif')",
+        "url('https://media3.giphy.com/media/3ohs4oQe6t43f6ZBS0/giphy.gif?cid=ecf05e47bnh31mnvufgaxxjjuufx0tprj20h40zai3g2x3xq&ep=v1_gifs_related&rid=giphy.gif&ct=g')",
+        "url('https://media3.giphy.com/media/TQmCzpo9oqniU/giphy.gif?cid=ecf05e47bnh31mnvufgaxxjjuufx0tprj20h40zai3g2x3xq&ep=v1_gifs_related&rid=giphy.gif&ct=g')",
+        // ... more URLs
+    ];
     document.addEventListener('DOMContentLoaded', (event) => {
         const bgAudio = document.getElementById('bgAudio');
         const volumeWarning = document.getElementById('volumeWarning');
         const body = document.body;
+        function setRandomBackgroundImage() {
+            const randomIndex = Math.floor(Math.random() * gifs.length);
+            body.style.backgroundImage = gifs[randomIndex];
+        }
+        
         if (bgAudio && volumeWarning) {
             document.body.addEventListener('click', function () {
                 if (!audioPlayed) {
                     bgAudio.play();
                     audioPlayed = true;
                     volumeWarning.style.display = 'none';
-                    body.style.backgroundImage = "url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExb2d3cDV2NXMybHFwdTVoMGUxNm0zYTc4ZGx2bTJsaDFxY251YmZ3aiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3ov9jEnypymbFQJ9CM/giphy.gif')";
+                    setRandomBackgroundImage();
                 }
             });
         }
