--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <b>he/him</b><br>
                 Im an engineer by trade, and I like to make things. Hobbies include programming, tinkering, and gaming.
             </p>
-            <a href="mailto:sorghum_dilator_0o@icloud.com" class="pill">
+            <a href="mailto:1hedge1@protonmail.com" class="pill">
                 <i class="fa-solid fa-envelope fa-lg"></i> <b>
                     Contact
                     Me
@@ -79,7 +79,6 @@
         "url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExb2d3cDV2NXMybHFwdTVoMGUxNm0zYTc4ZGx2bTJsaDFxY251YmZ3aiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3ov9jEnypymbFQJ9CM/giphy.gif')",
         "url('https://media3.giphy.com/media/3ohs4oQe6t43f6ZBS0/giphy.gif?cid=ecf05e47bnh31mnvufgaxxjjuufx0tprj20h40zai3g2x3xq&ep=v1_gifs_related&rid=giphy.gif&ct=g')",
         "url('https://media3.giphy.com/media/TQmCzpo9oqniU/giphy.gif?cid=ecf05e47bnh31mnvufgaxxjjuufx0tprj20h40zai3g2x3xq&ep=v1_gifs_related&rid=giphy.gif&ct=g')",
-        // ... more URLs
     ];
     document.addEventListener('DOMContentLoaded', (event) => {
         const bgAudio = document.getElementById('bgAudio');
