--- a/index.html
+++ b/index.html
@@ -44,11 +44,6 @@
                     Me
                 </b>
             </a>
-            <a href="https://tinyurl.com/hedge-patreon" class="pill" style="margin-top: 10px" ;>
-                <i class="fa-brands fa-patreon"></i> <b>
-                    Patreon Donation
-                </b>
-            </a>
             <div class="bottom-container">
                 <div class="icon-container">
                     <a href="https://github.com/CodeHedge" class="icon-circle" target="_blank">
@@ -60,7 +55,7 @@
                     <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
                         <i class="fa-brands fa-steam fa-lg"></i>
                     </a>
-                    <a href="https://tinyurl.com/hedge-kofi" class="icon-circle" target="_blank">
+                    <a href="https://tinyurl.com/hedge-patreon" class="icon-circle" target="_blank">
                         <i class="fa-solid fa-hand-holding-dollar fa-lg"></i>
                     </a>
 
