--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
     <div class="cursor-dot" data-cursor-dot></div>
     <div class="cursor-outline" data-cursor-outline></div>
-    <!--<div class="overlay" id="volumeWarning">
+    <div class="overlay" id="volumeWarning">
         <h4 style="font-size: 12pt;">[VOLUME WARNING]</h4>
-    </div>-->
+    </div>
     <div id="actualContent">
         <div id="particles-js"></div>
 
@@ -76,23 +76,23 @@
         "url('https://media3.giphy.com/media/TQmCzpo9oqniU/giphy.gif?cid=ecf05e47bnh31mnvufgaxxjjuufx0tprj20h40zai3g2x3xq&ep=v1_gifs_related&rid=giphy.gif&ct=g')",
     ];
     document.addEventListener('DOMContentLoaded', (event) => {
-        const bgAudio = document.getElementById('bgAudio');
-        const body = document.body;
-        function setRandomBackgroundImage() {
-            const randomIndex = Math.floor(Math.random() * gifs.length);
-            body.style.backgroundImage = gifs[randomIndex];
-        }
-        
-        if (bgAudio && volumeWarning) {
-            document.body.addEventListener('click', function () {
-                if (!audioPlayed) {
-                    bgAudio.play();
-                    audioPlayed = true;
-                    setRandomBackgroundImage();
-                }
-            });
-        }
-    });
+    const bgAudio = document.getElementById('bgAudio');
+    const body = document.body;
+    function setRandomBackgroundImage() {
+        const randomIndex = Math.floor(Math.random() * gifs.length);
+        body.style.backgroundImage = gifs[randomIndex];
+    }
+    
+    if (bgAudio) {
+        document.body.addEventListener('click', function () {
+            if (!audioPlayed) {
+                bgAudio.play();
+                audioPlayed = true;
+                setRandomBackgroundImage();
+            }
+        });
+    }
+});
 </script>
 </body>
 </html>
