--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="greeting-rainbow">Hedge</p>
             <p class="details">
                 <b>he/him</b><br>
-                Im sorry.
+                I like to make things and share them with people. If i've ever made something that you enjoyed, let me know! Hope you enjoy one of my favorite songs.
             </p>
             <a href="mailto:1hedge1@protonmail.com" class="pill">
                 <i class="fa-solid fa-envelope fa-lg"></i> <b>
@@ -55,9 +55,9 @@
                     <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
                         <i class="fa-brands fa-steam fa-lg"></i>
                     </a>
-                    <a href="https://tinyurl.com/hedge-patreon" class="icon-circle" target="_blank">
+                    <!--<a href="https://tinyurl.com/hedge-patreon" class="icon-circle" target="_blank">
                         <i class="fa-solid fa-hand-holding-dollar fa-lg"></i>
-                    </a>
+                    </a>-->
 
                 </div>
             </div>
