--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
                         <i class="fa-brands fa-steam fa-lg"></i>
                     </a>
-                    <!--<a href="https://tinyurl.com/hedge-patreon" class="icon-circle" target="_blank">
+                    <a href="https://patreon.com/Hedge729" class="icon-circle" target="_blank">
                         <i class="fa-solid fa-hand-holding-dollar fa-lg"></i>
-                    </a>-->
+                    </a>
 
                 </div>
             </div>
