--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="particles-js"></div>
 
         <audio id="bgAudio" loop>
-            <source src="https://cdn.hedge.games/Flume_Nice_2_know_u.mp3" type="audio/mpeg">
+            <source src="https://cdn.edgeofhedge.com/Flume_Nice_2_know_u.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
         <div class="container">
