--- a/index.html
+++ b/index.html
@@ -36,12 +36,17 @@
             <p class="greeting-rainbow">Hedge</p>
             <p class="details">
                 <b>he/him</b><br>
-                I like to make things and share them with people. If i've ever made something that you enjoyed, let me know! Hope you enjoy one of my favorite songs.
+                I like to make things and share them with people. I also started a small shop that i sell devices on, check it out below! If i've ever made something that you enjoyed, let me know! Hope you enjoy one of my favorite songs.
             </p>
             <a href="mailto:1hedge1@protonmail.com" class="pill">
                 <i class="fa-solid fa-envelope fa-lg"></i> <b>
                     Contact
                     Me
+                </b>
+            </a>
+            <a href="https://www.etsy.com/shop/BiscuitShopUS" class="pill">
+                <i class="fa-solid fa-envelope fa-lg"></i> <b>
+                    My Shop
                 </b>
             </a>
             <div class="bottom-container">
