--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                     Me
                 </b>
             </a>
-            <a href="https://www.etsy.com/shop/BiscuitShopUS" class="pill">
+            <!--add a -->
+            <a href="https://www.etsy.com/shop/BiscuitShopUS" class="pill" style="margin-top: 10px;">
                 <i class="fa-solid fa-envelope fa-lg"></i> <b>
                     My Shop
                 </b>
