--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="greeting-rainbow">Hedge</p>
             <p class="details">
                 <b>he/him</b><br>
-                I like to make things and share them with people. I also started a small shop that i sell devices on, check it out below! If i've ever made something that you enjoyed, let me know! Hope you enjoy one of my favorite songs.
+                And I like to make things!
             </p>
             <a href="mailto:1hedge1@protonmail.com" class="pill">
                 <i class="fa-solid fa-envelope fa-lg"></i> <b>
