Link update after ban....

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 </b>
             </a>
             <!--add a -->
-            <a href="https://www.etsy.com/shop/BiscuitShopUS" class="pill" style="margin-top: 10px;">
-                <i class="fa-solid fa-envelope fa-lg"></i> <b>
+            <a href="https://biscuitshop.us" class="pill" style="margin-top: 10px;">
+                <i class="fa-solid fa-store fa-lg"></i> <b>
                     My Shop
                 </b>
             </a>
