--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="greeting-rainbow">Hedge</p>
             <p class="details">
                 <b>he/him</b><br>
-                And I like to make things!
+                And I like to make things! I recently started a youtube channel where i make build guides for devices I find cool. 
             </p>
             <a href="mailto:trenthancock123@gmail.com" class="pill">
                 <i class="fa-solid fa-envelope fa-lg"></i> <b>
@@ -54,6 +54,12 @@
                     </a>
                     <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
                         <i class="fa-brands fa-steam fa-lg"></i>
+                    </a>
+                    <a href="https://www.youtube.com/channel/UCkqQnrAIUrOufcdjBTFCtUg/" class="icon-circle" target="_blank">
+                        <i class="fa-brands fa-youtube fa-lg"></i>
+                    </a>
+                    <a href="https://makerworld.com/en/@hedge" class="icon-circle" target="_blank">
+                        <i class="fa-solid fa-layer-group"></i>
                     </a>
 
                 </div>
