restructuered files for using live server dev environment

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Left Container -->
         <div class="left-container">
             <a href="/" class="tab">Home</a>
-            <a href="/countdown" class="tab">Countdown</a>
+            <a href="./countdown/" class="tab">Countdown</a>
         </div>
         <!-- Right Container -->
         <div class="right-container">
