--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="particles-js"></div>
 
         <audio id="bgAudio" loop>
-            <source src="https://cdn.edgeofhedge.com/Flume_Nice_2_know_u.mp3" type="audio/mpeg">
+            <source src="/assets/Nice2KnowU.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
 
