--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p class="greeting-rainbow">Hedge</p>
             <p class="details">
                 <b>he/him</b><br>
-                And I like to make things! I recently started a youtube channel where i make build guides for devices I find cool. 
+                And I like to make things!
             </p>
             <a href="mailto:hedge@edgeofhedge.com" class="pill">
                 <i class="fa-solid fa-envelope fa-lg"></i> <b>
